@@ -23,6 +23,9 @@ Security related changes:
   legacy function could result in a stack-based buffer overflow when
   using the "unix" protocol.  Reported by Martin Sebor.
 
+  CVE-2022-23218: Passing an overlong file name to the svcunix_create
+  legacy function could result in a stack-based buffer overflow.
+
 The following bugs are resolved with this release:
 
   [15271] dlfcn function failure after dlmopen terminates process
@@ -42,6 +45,7 @@ The following bugs are resolved with this release:
   [28607] Masked signals are delivered on thread exit
   [28524] Conversion from ISO-2022-JP-3 with iconv may emit spurious NULs
   [28532] powerpc64[le]: CFI for assembly templated syscalls is incorrect
+  [28768] CVE-2022-23218: Buffer overflow in sunrpc svcunix_create
 
 Version 2.33
 
